# html-template-builder

./: Makefile  README.md  pyproject.toml
app/: __main__.py  builder.py  manifest.py  utils.py  watch.py
